meep-model validator fixes

--- a/examples/demo1/demo1-scenario.yaml
+++ b/examples/demo1/demo1-scenario.yaml
@@ -1,4 +1,4 @@
-version: 1.6.0
+version: 1.6.6
 name: demo1
 deployment:
     netChar:
@@ -71,11 +71,11 @@ deployment:
                                                         externalPort: null
                                                 meSvcName: null
                                             netChar:
+                                                latencyDistribution: Normal
                                                 throughputDl: 1000
                                                 throughputUl: 1000
                                                 latency: null
                                                 latencyVariation: null
-                                                latencyDistribution: null
                                                 throughput: null
                                                 packetLoss: null
                                             isExternal: null
@@ -110,11 +110,11 @@ deployment:
                                                         externalPort: null
                                                 meSvcName: null
                                             netChar:
+                                                latencyDistribution: Normal
                                                 throughputDl: 1000
                                                 throughputUl: 1000
                                                 latency: null
                                                 latencyVariation: null
-                                                latencyDistribution: null
                                                 throughput: null
                                                 packetLoss: null
                                             isExternal: null
@@ -136,11 +136,11 @@ deployment:
                                             appPacketLoss: null
                                             placementId: null
                                     netChar:
+                                        latencyDistribution: Normal
                                         throughputDl: 1000
                                         throughputUl: 1000
                                         latency: null
                                         latencyVariation: null
-                                        latencyDistribution: null
                                         throughput: null
                                         packetLoss: null
                                     isExternal: null
@@ -299,11 +299,11 @@ deployment:
                                                         port: 80
                                                         externalPort: null
                                             netChar:
+                                                latencyDistribution: Normal
                                                 throughputDl: 1000
                                                 throughputUl: 1000
                                                 latency: null
                                                 latencyVariation: null
-                                                latencyDistribution: null
                                                 throughput: null
                                                 packetLoss: null
                                             isExternal: null
@@ -338,11 +338,11 @@ deployment:
                                                         port: 80
                                                         externalPort: null
                                             netChar:
+                                                latencyDistribution: Normal
                                                 throughputDl: 1000
                                                 throughputUl: 1000
                                                 latency: null
                                                 latencyVariation: null
-                                                latencyDistribution: null
                                                 throughput: null
                                                 packetLoss: null
                                             isExternal: null
@@ -364,11 +364,11 @@ deployment:
                                             appPacketLoss: null
                                             placementId: null
                                     netChar:
+                                        latencyDistribution: Normal
                                         throughputDl: 1000
                                         throughputUl: 1000
                                         latency: null
                                         latencyVariation: null
-                                        latencyDistribution: null
                                         throughput: null
                                         packetLoss: null
                                     isExternal: null
@@ -429,11 +429,11 @@ deployment:
                                                         port: 80
                                                         externalPort: null
                                             netChar:
+                                                latencyDistribution: Normal
                                                 throughputDl: 1000
                                                 throughputUl: 1000
                                                 latency: null
                                                 latencyVariation: null
-                                                latencyDistribution: null
                                                 throughput: null
                                                 packetLoss: null
                                             isExternal: null
@@ -468,11 +468,11 @@ deployment:
                                                         port: 80
                                                         externalPort: null
                                             netChar:
+                                                latencyDistribution: Normal
                                                 throughputDl: 1000
                                                 throughputUl: 1000
                                                 latency: null
                                                 latencyVariation: null
-                                                latencyDistribution: null
                                                 throughput: null
                                                 packetLoss: null
                                             isExternal: null
@@ -494,11 +494,11 @@ deployment:
                                             appPacketLoss: null
                                             placementId: null
                                     netChar:
+                                        latencyDistribution: Normal
                                         throughputDl: 1000
                                         throughputUl: 1000
                                         latency: null
                                         latencyVariation: null
-                                        latencyDistribution: null
                                         throughput: null
                                         packetLoss: null
                                     isExternal: null
@@ -528,11 +528,11 @@ deployment:
                                             commandArguments: '-c, export; iperf -u -c $IPERF_SERVICE_HOST -p $IPERF_SERVICE_PORT -t 3600 -b 50M;'
                                             commandExe: /bin/bash
                                             netChar:
+                                                latencyDistribution: Normal
                                                 throughputDl: 1000
                                                 throughputUl: 1000
                                                 latency: null
                                                 latencyVariation: null
-                                                latencyDistribution: null
                                                 throughput: null
                                                 packetLoss: null
                                             isExternal: null
@@ -554,11 +554,11 @@ deployment:
                                             appPacketLoss: null
                                             placementId: null
                                     netChar:
+                                        latencyDistribution: Normal
                                         throughputDl: 1000
                                         throughputUl: 1000
                                         latency: null
                                         latencyVariation: null
-                                        latencyDistribution: null
                                         throughput: null
                                         packetLoss: null
                                     isExternal: null
@@ -608,11 +608,11 @@ deployment:
                                                         protocol: UDP
                                                 egressServiceMap: null
                                             netChar:
+                                                latencyDistribution: Normal
                                                 throughputDl: 1000
                                                 throughputUl: 1000
                                                 latency: null
                                                 latencyVariation: null
-                                                latencyDistribution: null
                                                 throughput: null
                                                 packetLoss: null
                                             image: null
@@ -635,11 +635,11 @@ deployment:
                                             appPacketLoss: null
                                             placementId: null
                                     netChar:
+                                        latencyDistribution: Normal
                                         throughputDl: 1000
                                         throughputUl: 1000
                                         latency: null
                                         latencyVariation: null
-                                        latencyDistribution: null
                                         throughput: null
                                         packetLoss: null
                                     isExternal: null
@@ -750,11 +750,11 @@ deployment:
                                                         port: 80
                                                         externalPort: null
                                             netChar:
+                                                latencyDistribution: Normal
                                                 throughputDl: 1000
                                                 throughputUl: 1000
                                                 latency: null
                                                 latencyVariation: null
-                                                latencyDistribution: null
                                                 throughput: null
                                                 packetLoss: null
                                             isExternal: null
@@ -789,11 +789,11 @@ deployment:
                                                         port: 80
                                                         externalPort: null
                                             netChar:
+                                                latencyDistribution: Normal
                                                 throughputDl: 1000
                                                 throughputUl: 1000
                                                 latency: null
                                                 latencyVariation: null
-                                                latencyDistribution: null
                                                 throughput: null
                                                 packetLoss: null
                                             isExternal: null
@@ -815,11 +815,11 @@ deployment:
                                             appPacketLoss: null
                                             placementId: null
                                     netChar:
+                                        latencyDistribution: Normal
                                         throughputDl: 1000
                                         throughputUl: 1000
                                         latency: null
                                         latencyVariation: null
-                                        latencyDistribution: null
                                         throughput: null
                                         packetLoss: null
                                     isExternal: null
