--- a/charts/couchdb/values.yaml
+++ b/charts/couchdb/values.yaml
@@ -192,8 +192,10 @@ couchdbConfig:
     # 5984 when is set to true.
     require_valid_user: false
   couch_httpd_auth:
-    timeout: 604800
-    require_valid_user: false
+    # Setting default timeout to 365 days (365*24*60*60)
+    timeout: 31536000
+    require_valid_user: true
+    allow_persistent_cookies: true
 
 # Kubernetes local cluster domain.
 # This is used to generate FQDNs for peers when joining the CouchDB cluster.
