--- a/charts/couchdb/values.yaml
+++ b/charts/couchdb/values.yaml
@@ -193,7 +193,7 @@ couchdbConfig:
     require_valid_user: false
   couch_httpd_auth:
     # Setting default timeout to 365 days (365*24*60*60)
-    timeout: 31536000
+    # timeout: 31536000
     require_valid_user: true
     allow_persistent_cookies: true
 
