Added prometheus alerts and slack configuration in separate config file.

--- a/charts/kube-prometheus-stack/templates/prometheus/additionalPrometheusRules.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/additionalPrometheusRules.yaml
@@ -1,4 +1,4 @@
-{{- if or .Values.additionalPrometheusRules .Values.additionalPrometheusRulesMap}}
+{{- if and (.Values.alertmanager.enabled) (or .Values.additionalPrometheusRules .Values.additionalPrometheusRulesMap) }}
 apiVersion: v1
 kind: List
 items:
