--- a/charts/kube-prometheus-stack/templates/prometheus/pvc-deleter.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/pvc-deleter.yaml
@@ -50,8 +50,9 @@ spec:
         args:
         - "delete"
         - "pvc"
-        - "{{ .Values.prometheus.prometheusSpec.storageSpec.volumeClaimTemplate.metadata.name }}-prometheus-{{ template "kube-prometheus-stack.fullname" . }}-prometheus-0"
-        - "{{ .Values.alertmanager.alertmanagerSpec.storage.volumeClaimTemplate.metadata.name }}-alertmanager-{{ template "kube-prometheus-stack.fullname" . }}-alertmanager-0"
+        - "--all"
+        # - "{{ .Values.prometheus.prometheusSpec.storageSpec.volumeClaimTemplate.metadata.name }}-prometheus-{{ template "kube-prometheus-stack.fullname" . }}-prometheus-0"
+        # - "{{ .Values.alertmanager.alertmanagerSpec.storage.volumeClaimTemplate.metadata.name }}-alertmanager-{{ template "kube-prometheus-stack.fullname" . }}-alertmanager-0"
       serviceAccountName: pvc-deleter-sa
       securityContext:
         runAsUser: 0
